src/input/css/styles/breeze/check.css
/*
 * SPDX-License-Identifier: BSD-2-Clause
 * SPDX-FileCopyrightText: 2025 Arjen Hiemstra <ahiemstra@heimr.nl>
 */

/*
 * Checkable controls like checkboxes and radio buttons.
 */

checkbox,
radiobutton,
radiodelegate
{
    icon-alignment-horizontal: start;
/*     icon-width:  */
    spacing: var(--small-spacing);
    padding: var(--small-spacing);

    color: var(--window-text-color);
}

checkbox indicator,
radiobutton indicator,
radiodelegate indicator
{
    layout-alignment-container: content;
    layout-alignment-horizontal: start;
    layout-alignment-order: -1;
}

checkbox indicator,
checkdelegate indicator,
menuitem indicator,
radiobutton indicator,
radiodelegate indicator
{
    width: var(--icon-size-small);
    height: var(--icon-size-small);
}

checkbox:checked indicator,
checkdelegate:checked indicator,
menuitem:checked indicator,
radiobutton:checked indicator,
radiodelegate:checked indicator
{
    background-image: url("images/checkmark.svg");
    background-color: var(--button-active-highlight-color);
    border: 1px solid var(--button-active-border-color);
    color: var(--window-text-color);
}

radiobutton indicator,
radiodelegate indicator
{
    border-radius: 8px;
}

radiobutton:checked indicator,
radiodelegate:checked indicator
{
    background-image: url("images/radio.svg");
}

switch,
switchdelegate
{
    padding: var(--large-spacing);

    icon-alignment: content start center 0;
    text-alignment: content start center 1;
}

switch indicator,
switchdelegate indicator
{
    layout-alignment-container: item;
    layout-alignment-horizontal: start;

    width: 36px;
    height: 12px;
    border-radius: 6px;

    background-color: mix(var(--button-active-background-color), var(--button-active-text-color), 0.1);
    border: 1px solid var(--button-active-border-color);

    handle {
        width: var(--grid-unit);
        height: var(--grid-unit);
        /*      border-radius: calc(var(--grid-unit) / 2); */
        border-radius: 9px;

        background-color: var(--button-active-background-color);
        border: 1px solid var(--button-active-border-color);
    }

    &:hovered {
        border: 1px solid var(--highlight-color);

        handle {
            border: 1px solid var(--highlight-color);
        }
    }

    &:checked {
        background-color: var(--button-active-highlight-color);
    }
}

switch:visual-focus indicator handle,
switchdelegate:visual-focus indicator handle
{
    outline: var(--focus-outline);
}

